--- a/showerstopwatch.html
+++ b/showerstopwatch.html
@@ -7,18 +7,46 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      margin-top: 50px;
+      margin: 0;
       background: #f7f7f7;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     #display {
       font-size: 2em;
       margin: 20px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    #display div {
+      width: 100%;
+      text-align: center;
     }
     button {
       font-size: 1em;
       padding: 10px 20px;
       margin: 5px;
       cursor: pointer;
+    }
+
+    /* Media query for mobile devices */
+    @media (max-width: 600px) {
+      body {
+        height: 100vh;
+      }
+      #display {
+        font-size: 4em;
+      }
+      button {
+        font-size: 2em;
+        padding: 20px 40px;
+      }
     }
   </style>
 </head>
